--- a/META.yml
+++ b/META.yml
@@ -1,20 +1,21 @@
---- 
+---
 abstract: turn your Moose class into a singleton
-author: Shawn M Moore <sartak@gmail.com>
-build_requires: 
+author:
+  - 'Shawn M Moore <sartak@gmail.com>'
+build_requires:
   Test::Exception: 0
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: Perl
-meta-spec: 
+meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 name: MooseX-Singleton
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Moose: 0
-version: 0.03
+version: 0.04
