--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,11 @@
 --- 
 abstract: turn your Moose class into a singleton
-author: 
-  - Shawn M Moore <sartak@gmail.com>
+author: Shawn M Moore <sartak@gmail.com>
 build_requires: 
   Test::Exception: 0
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: Module::Install version 0.67
 license: Perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -17,5 +16,5 @@ no_index:
     - inc
     - t
 requires: 
-  Moose: 0.37
+  Moose: 0.41
 version: 0.07
