Import of DROLSKY/MooseX-Singleton-0.10 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.10
gitpan-cpan-path:         DROLSKY/MooseX-Singleton-0.10.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,7 +17,7 @@ no_index:
     - inc
     - t
 requires:
-  Moose: 0.55_01
+  Moose: 0.56
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.09_02
+version: 0.10
