--- a/META.yml
+++ b/META.yml
@@ -3,10 +3,13 @@ abstract: 'turn your Moose class into a singleton'
 author:
   - 'Shawn M Moore <sartak@gmail.com>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::Exception: 0
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.79'
+generated_by: 'Module::Install version 0.84'
 license: Perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,4 +23,4 @@ requires:
   Moose: 0.74
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.15
+version: 0.16
