--- a/META.yml
+++ b/META.yml
@@ -4,8 +4,9 @@ author:
   - 'Shawn M Moore <sartak@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  Scalar::Util: 0
   Test::Exception: 0
-  Test::More: 0
+  Test::More: 0.88
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -19,8 +20,9 @@ no_index:
   directory:
     - inc
     - t
+    - xt
 requires:
   Moose: 0.82
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.21
+version: 0.22
