--- a/META.yml
+++ b/META.yml
@@ -10,8 +10,8 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
-license: Perl
+generated_by: 'Module::Install version 0.99'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
@@ -25,4 +25,4 @@ requires:
   Moose: 0.82
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.22
+version: 0.23
