Import of DROLSKY/MooseX-Singleton-0.25 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.25
gitpan-cpan-path:         DROLSKY/MooseX-Singleton-0.25.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -7,10 +7,11 @@ build_requires:
   Scalar::Util: 0
   Test::Exception: 0
   Test::More: 0.88
+  Test::Requires: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.99'
+generated_by: 'Module::Install version 1.00'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,7 +23,7 @@ no_index:
     - t
     - xt
 requires:
-  Moose: 0.94
+  Moose: 1.10
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.24
+version: 0.25
