--- a/META.yml
+++ b/META.yml
@@ -4,26 +4,23 @@ author:
   - 'Shawn M Moore <sartak@gmail.com>'
 build_requires:
   ExtUtils::MakeMaker: 6.42
-  Scalar::Util: 0
-  Test::Exception: 0
+  Test::Fatal: 0
   Test::More: 0.88
   Test::Requires: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.00'
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.110240'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: MooseX-Singleton
-no_index:
-  directory:
-    - inc
-    - t
-    - xt
 requires:
   Moose: 1.10
+  Scalar::Util: 0
 resources:
-  license: http://dev.perl.org/licenses/
-version: 0.25
+  bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=MooseX-Singleton
+  repository: git://git.moose.perl.org/MooseX-Singleton.git
+version: 0.26
+x_authority: cpan:SARTAK
