Import of DROLSKY/MooseX-Singleton-0.27 from CPAN.
gitpan-cpan-distribution: MooseX-Singleton
gitpan-cpan-version:      0.27
gitpan-cpan-path:         DROLSKY/MooseX-Singleton-0.27.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,9 +2,8 @@ name    = MooseX-Singleton
 author  = Shawn M Moore <sartak@gmail.com>
 license = Perl_5
 copyright_holder = Shawn M Moore
-copyright_year   = 2001
 
-version = 0.26
+version = 0.27
 
 [GatherDir]
 [PruneCruft]
@@ -25,7 +24,7 @@ version = 0.26
 [UploadToCPAN]
 
 [NextRelease]
-format = %v %{ccc, MMM dd, yyyy}d
+format = %v %{yyyy-MM-dd}d
 
 [PkgVersion]
 
